--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
     name: Olivier Dolbeau
     email: odolbeau@gmail.com
 title: Olivier Dolbeau
-description: Web Developer, Symfony2 fan, beer lover.
+description: Web Developer, Symfony2 fan, be[a|e]r lover.
 
 feedburner:
     id: odolbeau
